--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "TranHuuPhu1988 <tranhuuphu877@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "npm run dev",
     "build": "node build/build.js"
   },
   "dependencies": {
