--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "TranHuuPhu1988 <tranhuuphu877@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "webpack-dev-server -d --config webpack.dev.config.js --content-base public/ --progress --colors",
     "dev": "npm run dev",
     "build": "node build/build.js"
   },
